<resources>
    <string name="app_name">SignUpForm</string>
    <string name="email">Email:</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>


    <!--- Error messages -->

    <string name="emailError">The Password Confirmation field is required.</string>
    <string name="usernameError">The Password Confirmation field is required.</string>
    <string name="passwordError">The Password Confirmation field is required.</string>
    <string name="confirmPasswordError">The Password Confirmation field is required.</string>

    <string name="confirmPasswordMismatchError">The Password and Password Confirmation fields must match.</string>
</resources>
