<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FormActivity">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="250dp" android:id="@+id/tableLayout" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp">

        <TableRow android:layout_width="match_parent" android:layout_height = "0dp"
                  android:layout_weight = "1">
            <TextView
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailView"
            />
            <EditText
                    android:layout_width="130dp"
                    android:layout_height="47dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/emailInput"
            />
            <TextView
                    android:layout_weight="5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/emailErrorView"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height = "0dp"
                  android:layout_weight = "1">
            <TextView
                    android:text="@string/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/usernameView"
            />
            <EditText
                    android:layout_width="130dp"
                    android:layout_height="47dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/usernameInput"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="3"
                    android:layout_height="wrap_content" android:id="@+id/usernameErrorView"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height = "0dp"
                  android:layout_weight = "1">
            <TextView
                    android:text="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/passwordView"/>
            <EditText
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordInput"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="3"
                    android:layout_height="wrap_content" android:id="@+id/passwordErrorView"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height = "0dp"
                  android:layout_weight = "1">
            <TextView
                    android:text="@string/confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/confirmPasswordView"/>
            <EditText
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/confirmPasswordInput"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="3"
                    android:layout_height="wrap_content" android:id="@+id/confirmPasswordErrorView"/>
        </TableRow>
    </TableLayout>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="162dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>